# xcode-clang-inject-llvm-pass

./: .gitignore  README.md
PassSkeleton/: CMakeLists.txt
PassSkeleton/include/PassSkeleton/: MyPass.h  RegisterPass.h
PassSkeleton/src/dummy/: Dummy.cpp
PassSkeleton/src/loader/: Loader.cpp
PassSkeleton/src/pass/: MyPass.cpp
PassSkeleton/src/register/: RegisterPass.cpp
scripts/: inject.sh  install.sh  uninstall.sh
